--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,6 +24,10 @@ body.guest {
     z-index: 2;
 }
 
+.box-bg {
+    background-color: #2B3035;
+}
+
 /* Auth CSS */
 html,
 body.auth {
@@ -110,6 +114,18 @@ body.auth {
     font-size: 6rem;
 }
 
+.sensor-column {
+    /* This should match the width to create a square */
+    background-color: #172b4d;
+    /* Change the background color to your preference */
+    align-items: center;
+    color: #ffffff;
+    /* Change the text color to your preference */
+    font-weight: bold;
+    /* Optionally, set the font weight */
+    font-size: 4rem;
+}
+
 .schott-colour {
     background-color: #005abb;
 }
@@ -131,7 +147,7 @@ body.auth {
 }
 
 .splide__pagination__page {
-    background: #172b4d !important;
+    background: #FFFFFF !important;
 }
 
 .splide__pagination__page.is-active {
