--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -142,7 +142,7 @@ body.auth {
 .splide__slide img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center center;
 }
 
