1) Add new Pax Status Page 2) Font change in Smoking Area Page 3) Entry log can delete as long as no exit time 4) Entry log new filter exit_time

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -126,6 +126,18 @@ body.auth {
     font-size: 4rem;
 }
 
+.station-pax {
+    /* This should match the width to create a square */
+    background-color: #172b4d;
+    /* Change the background color to your preference */
+    align-items: center;
+    color: #ffffff;
+    /* Change the text color to your preference */
+    font-weight: bold;
+    /* Optionally, set the font weight */
+    font-size: 10rem;
+}
+
 .schott-colour {
     background-color: #005abb;
 }
